modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-users/constraint_pss_restricted.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowedUsers
metadata:
  name: pod-security-standards
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: security.deckhouse.io/pod-policy
          operator: In
          values: 
          - baseline
          - restricted
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
