modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-users/test_samples/constraint_templates/pss_restricted/002-allowed-deployment-runAsNonRoot-true-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed-deployment-runAsNonRoot-true-container
  namespace: testns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          securityContext:
            runAsNonRoot: true
