modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-users/test_samples/constraint_templates/pss_restricted/003-allowed-runAsNonRoot-true-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-runAsNonRoot-true-container
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsNonRoot: true
