modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-users/test_samples/constraint_templates/pss_restricted/004-allowed-runAsNonRoot-true-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-runAsNonRoot-true-pod
  namespace: testns
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: nginx
      image: nginx
