modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-users/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-users
tests:
- name: pss-restricted
  template: ../../templates/security/allowed-users.yaml
  constraint: constraint_pss_restricted.yaml
  cases:
  - name: 010-disallowed-no-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/010-disallowed-no-securityContext.yaml
    assertions:
    - violations: yes
  - name: 003-allowed-runAsNonRoot-true-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/003-allowed-runAsNonRoot-true-container.yaml
    assertions:
    - violations: no
  - name: 004-allowed-runAsNonRoot-true-pod
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/004-allowed-runAsNonRoot-true-pod.yaml
    assertions:
    - violations: no
  - name: 005-allowed-runAsUser-non-zero-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/005-allowed-runAsUser-non-zero-container.yaml
    assertions:
    - violations: no
  - name: 006-allowed-runAsUser-non-zero-pod
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/006-allowed-runAsUser-non-zero-pod.yaml
    assertions:
    - violations: no
  - name: 012-disallowed-runAsUser-zero-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/012-disallowed-runAsUser-zero-container.yaml
    assertions:
    - violations: yes
  - name: 013-disallowed-runAsUser-zero-pod
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/013-disallowed-runAsUser-zero-pod.yaml
    assertions:
    - violations: yes
  - name: 011-disallowed-runAsNonRoot-false-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/011-disallowed-runAsNonRoot-false-container.yaml
    assertions:
    - violations: yes
  - name: 009-disallowed-multiple-containers-one-root
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/009-disallowed-multiple-containers-one-root.yaml
    assertions:
    - violations: yes
  - name: 002-allowed-deployment-runAsNonRoot-true-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/002-allowed-deployment-runAsNonRoot-true-container.yaml
    assertions:
    - violations: no
  - name: 008-disallowed-deployment-runAsUser-zero-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/008-disallowed-deployment-runAsUser-zero-container.yaml
    assertions:
    - violations: no
  - name: 001-allowed-daemonset-runAsNonRoot-true-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/001-allowed-daemonset-runAsNonRoot-true-container.yaml
    assertions:
    - violations: no
  - name: 007-disallowed-daemonset-runAsUser-zero-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/007-disallowed-daemonset-runAsUser-zero-container.yaml
    assertions:
    - violations: no
- name: security-policy
  template: ../../templates/security/allowed-users.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 029-disallowed-no-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/029-disallowed-no-securityContext.yaml
    assertions:
    - violations: yes
  - name: 020-allowed-runAsUser-in-range-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/020-allowed-runAsUser-in-range-container.yaml
    assertions:
    - violations: no
  - name: 021-allowed-runAsUser-in-range-pod
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/021-allowed-runAsUser-in-range-pod.yaml
    assertions:
    - violations: no
  - name: 023-allowed-runAsUser-on-edge-min-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/023-allowed-runAsUser-on-edge-min-container.yaml
    assertions:
    - violations: no
  - name: 022-allowed-runAsUser-on-edge-max-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/022-allowed-runAsUser-on-edge-max-container.yaml
    assertions:
    - violations: no
  - name: 019-allowed-runAsGroup-in-range-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/019-allowed-runAsGroup-in-range-container.yaml
    assertions:
    - violations: no
  - name: 018-allowed-fsGroup-in-range-pod
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/018-allowed-fsGroup-in-range-pod.yaml
    assertions:
    - violations: no
  - name: 024-allowed-supplementalGroups-in-range-pod
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/024-allowed-supplementalGroups-in-range-pod.yaml
    assertions:
    - violations: no
  - name: 015-allowed-all-fields-in-range
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/015-allowed-all-fields-in-range.yaml
    assertions:
    - violations: no
  - name: 014-allowed-all-fields-in-range-with-pod-level
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/014-allowed-all-fields-in-range-with-pod-level.yaml
    assertions:
    - violations: no
  - name: 032-disallowed-runAsUser-out-of-range-low-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/032-disallowed-runAsUser-out-of-range-low-container.yaml
    assertions:
    - violations: yes
  - name: 031-disallowed-runAsUser-out-of-range-high-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/031-disallowed-runAsUser-out-of-range-high-container.yaml
    assertions:
    - violations: yes
  - name: 030-disallowed-runAsGroup-out-of-range-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/030-disallowed-runAsGroup-out-of-range-container.yaml
    assertions:
    - violations: yes
  - name: 027-disallowed-fsGroup-out-of-range-pod
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/027-disallowed-fsGroup-out-of-range-pod.yaml
    assertions:
    - violations: yes
  - name: 033-disallowed-supplementalGroups-out-of-range-pod
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/033-disallowed-supplementalGroups-out-of-range-pod.yaml
    assertions:
    - violations: yes
  - name: 028-disallowed-multiple-containers-one-out-of-range
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/028-disallowed-multiple-containers-one-out-of-range.yaml
    assertions:
    - violations: yes
  - name: 017-allowed-deployment-runAsUser-in-range-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/017-allowed-deployment-runAsUser-in-range-container.yaml
    assertions:
    - violations: no
  - name: 026-disallowed-deployment-runAsUser-out-of-range-low-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/026-disallowed-deployment-runAsUser-out-of-range-low-container.yaml
    assertions:
    - violations: no
  - name: 016-allowed-daemonset-runAsUser-in-range-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/016-allowed-daemonset-runAsUser-in-range-container.yaml
    assertions:
    - violations: no
  - name: 025-disallowed-daemonset-runAsUser-out-of-range-low-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/025-disallowed-daemonset-runAsUser-out-of-range-low-container.yaml
    assertions:
    - violations: no
- name: pss-restricted-with-exception
  template: ../../templates/security/allowed-users.yaml
  constraint: constraint_pss_restricted.yaml
  cases:
  - name: 036-041-allowed-by-exception-root-user
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/036-allow-root-user.yaml
    object: test_samples/security_policy_exceptions/pods/041-allowed-by-exception-root-user.yaml
    assertions:
    - violations: no
  - name: 035-038-allowed-by-exception-custom-user-range
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/035-allow-custom-user-range.yaml
    object: test_samples/security_policy_exceptions/pods/038-allowed-by-exception-custom-user-range.yaml
    assertions:
    - violations: no
  - name: 036-042-allowed-by-exception-user-mismatch-but-constraint-allows
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/036-allow-root-user.yaml
    object: test_samples/security_policy_exceptions/pods/042-allowed-by-exception-user-mismatch-but-constraint-allows.yaml
    assertions:
    - violations: no
  - name: 036-043-disallowed-by-exception-runAsNonRoot-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/036-allow-root-user.yaml
    object: test_samples/security_policy_exceptions/pods/043-disallowed-by-exception-runAsNonRoot-mismatch.yaml
    assertions:
    - violations: yes
  - name: 044-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/044-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
  - name: 036-039-allowed-by-exception-mismatch-but-constraint-allows
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/036-allow-root-user.yaml
    object: test_samples/security_policy_exceptions/pods/039-allowed-by-exception-mismatch-but-constraint-allows.yaml
    assertions:
    - violations: no
  - name: 036-040-allowed-by-exception-multiple-containers-all-allowed
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/036-allow-root-user.yaml
    object: test_samples/security_policy_exceptions/pods/040-allowed-by-exception-multiple-containers-all-allowed.yaml
    assertions:
    - violations: no
  - name: 037-045-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/037-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/045-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: yes
